--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #f8f8f8;
-  --color-grey-6: #12181b;
+  --color-grey-6: #e7e7e7;
 }
 
 body {
