--- a/css/styles.css
+++ b/css/styles.css
@@ -95,19 +95,19 @@
     /* color-1(#eabe7c)
      * color-2(#23967f)
      */
-    --color-1 : hsla(36, 72%, 70%, 1);
-    --color-2 : hsla(168, 62%, 36%, 1);
+    /* --color-1 : hsla(36, 72%, 70%, 1); */
+    --color-1 : hsla(168, 62%, 36%, 1);
 
     /* theme color variations
      */
-    --color-1-lighter : hsla(36, 72%, 90%, 1);
+    /* --color-1-lighter : hsla(36, 72%, 90%, 1);
     --color-1-light   : hsla(36, 72%, 80%, 1);
     --color-1-dark    : hsla(36, 72%, 60%, 1);
-    --color-1-darker  : hsla(36, 72%, 50%, 1);
-    --color-2-lighter : hsla(168, 62%, 56%, 1);
-    --color-2-light   : hsla(168, 62%, 46%, 1);
-    --color-2-dark    : hsla(168, 62%, 26%, 1);
-    --color-2-darker  : hsla(168, 62%, 16%, 1);
+    --color-1-darker  : hsla(36, 72%, 50%, 1); */
+    --color-1-lighter : hsla(168, 62%, 56%, 1);
+    --color-1-light   : hsla(168, 62%, 46%, 1);
+    --color-1-dark    : hsla(168, 62%, 26%, 1);
+    --color-1-darker  : hsla(168, 62%, 16%, 1);
 
     /* feedback colors
      * color-error(#ffd1d2), color-success(#c8e675), 
