--- a/css/styles.css
+++ b/css/styles.css
@@ -2692,6 +2692,7 @@ img.u-pull-left {
     font-size   : var(--text-huge);
     line-height : 1.0740;
     margin-top  : 0;
+    text-align: left;
 }
 
 /* ------------------------------------------------------------------- 
